--- a/output.html
+++ b/output.html
@@ -11,6 +11,197 @@
   <dl class='hwd'>
   <dt>
    <ul>
+    <li>Behörde</li>
+    <li class='pos'>NOUN</li>
+   </ul>
+  </dt>
+  <dd>authority</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>zuständige Behörde</dt>
+    <dd>competent authority</dd>
+    <dt>nationale Behörde</dt>
+    <dd>national authority</dd>
+    <dt>Behörde der Mitgliedstaaten</dt>
+    <dd>authority of the Member State</dd>
+    <dt>französische Behörde</dt>
+    <dd>French authority</dd>
+  </dl>
+  </dd>
+  <dd>agency</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>europäische Behörde</dt>
+    <dd>european agency</dd>
+    <dt>Europäischen Behörde für Lebensmittelsicherheit</dt>
+    <dd>european food safety agency</dd>
+    <dt>internationale Behörde</dt>
+    <dd>international agency</dd>
+    <dt>staatliche Behörde</dt>
+    <dd>government agency</dd>
+  </dl>
+  </dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Der Vorgang ist an die zuständige Behörde weitergeleitet worden.
+  </p>
+  <p>
+    "The case has been forwarded to the competent authority."
+  </p>
+  <p>
+    Bei der Behörde gingen Morddrohungen ein.
+  </p>
+  <p>
+    "The authorities received death threats."
+  </p>
+  <p>
+    Jahrelang hatte die Behörde keine Ahnung, wer hinter den Bränden steckte.
+  </p>
+  <p>
+    "For years, the authorities had no idea who was behind the fires."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>beschließen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to decide</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>einstimmig beschließen</dt>
+    <dd>to decide unanimously</dd>
+    <dt>beschließen heute</dt>
+    <dd>to decide today</dd>
+    <dt>von der kommission beschlossen</dt>
+    <dd>decided by the commission</dd>
+    <dt>dort beschlossen</dt>
+    <dd>decided there</dd>
+  </dl>
+  </dd>
+  <dd>to adopt</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>Maßnahmen beschließen</dt>
+    <dd>to adopt measures</dd>
+    <dt>einstimmig beschlossen</dt>
+    <dd>adopted unanimously</dd>
+    <dt>morgen beschließen</dt>
+    <dd>to adopt tomorrow</dd>
+    <dt>vom rat beschlossen</dt>
+    <dd>adopted by the council</dd>
+  </dl>
+  </dd>
+  <dd>to agree</dd>
+  <dd>to approve</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>während der portugiesischen präsidentschaft beschlossen</dt>
+    <dd>approved during the portuguese presidency</dd>
+  </dl>
+  </dd>
+  <dd>to choose</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Als sie mitten im Schneesturm einen Autounfall bauen, beschließen sie, getrennte Wege zu gehen.
+  </p>
+  <p>
+    "When they crash a car in the middle of a blizzard, they decide to go their separate ways."
+  </p>
+  <p>
+    Der Sicherheitsrat könne weitere Schritte beschließen, falls die Gewalt nicht ende, hieß es.
+  </p>
+  <p>
+    "The Security Council could take further steps if the violence did not end, it said."
+  </p>
+  <p>
+    Der Landesvorstand will am Donnerstag das weitere Vorgehen beschließen.
+  </p>
+  <p>
+    "The state board wants to decide on the further course of action on Thursday."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>wirtschaftlich</li>
+    <li class='pos'>ADJ</li>
+   </ul>
+  </dt>
+  <dd>economic</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>rein wirtschaftliche</dt>
+    <dd>purely economic</dd>
+  </dl>
+  </dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Die Forderung passe in die Zeit und sei wirtschaftlich vertretbar, fügte Henke hinzu.
+  </p>
+  <p>
+    "The demand fits in with the times and is economically justifiable, Henke added."
+  </p>
+  <p>
+    Kurios ist, dass sich der Ausfall des Superstars wirtschaftlich positiv auswirkt.
+  </p>
+  <p>
+    "The curious thing is that the loss of the superstar has a positive economic impact."
+  </p>
+  <p>
+    Doch nicht nur wirtschaftlich, auch ökologisch sei der Fischfang ein Desaster.
+  </p>
+  <p>
+    "But not only economically, but also \u00f6ecologically, fishing is a disaster."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>wirtschaftlich</li>
+    <li class='pos'>ADJ</li>
+   </ul>
+  </dt>
+  <dd>economic</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>rein wirtschaftliche</dt>
+    <dd>purely economic</dd>
+  </dl>
+  </dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Die Forderung passe in die Zeit und sei wirtschaftlich vertretbar, fügte Henke hinzu.
+  </p>
+  <p>
+    "The demand fits in with the times and is economically justifiable, Henke added."
+  </p>
+  <p>
+    Kurios ist, dass sich der Ausfall des Superstars wirtschaftlich positiv auswirkt.
+  </p>
+  <p>
+    "The curious thing is that the loss of the superstar has a positive economic impact."
+  </p>
+  <p>
+    Doch nicht nur wirtschaftlich, auch ökologisch sei der Fischfang ein Desaster.
+  </p>
+  <p>
+    "But not only economically, but also \u00f6ecologically, fishing is a disaster."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
     <li>kommen</li>
     <li class='pos'>VERB</li>
    </ul>
@@ -3234,6 +3425,392 @@
    </ul>
   </dt>
   <dd>to accommodate</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Inwieweit man den Griechen entgegenkommen wird, ist unklar.
+  </p>
+  <p>
+    "It is unclear to what extent the Greeks will be accommodated."
+  </p>
+  <p>
+    Es ist eine Strecke mir sehr viel Downforce und das sollte meine Fahrstil entgegenkommen wie schon in Budapest.
+  </p>
+  <p>
+    "It's a track with a lot of downforce and that should suit my riding style like it did in Budapest."
+  </p>
+  <p>
+    Wir müssen aber sicherstellen, dass wir unsere Strategie umsetzen und die Marktführung behalten können, in die Forschung investieren und den Wünschen unserer Kunden entgegenkommen.
+  </p>
+  <p>
+    "But we need to make sure that we can execute on our strategy and stay on the market, invest in research and meet the needs of our customers."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>herankommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to get</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Können die Walliser bis auf drei Zähler an die St. Galler herankommen?
+  </p>
+  <p>
+    "Can the Valais come within three of the St. Gallen?"
+  </p>
+  <p>
+    «Wir haben das alles nicht an uns herankommen lassen.
+  </p>
+  <p>
+    "\u00abWe didn't let it get to us."
+  </p>
+  <p>
+    So nahe wie möglich an die ersten Zehn herankommen, das wäre schon gut.
+  </p>
+  <p>
+    "To get as close to the top ten as possible, that would be good."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>herauskommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to come out</dd>
+  <dd>to come out of</dd>
+  <dd>to emerge</dd>
+  <dd>to end up</dd>
+  <dd>to get out</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>aus der Armut herauszukommen</dt>
+    <dd>to get out of poverty</dd>
+  </dl>
+  </dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Man darf seine Linie, seine Strategie, nicht verlassen, auch wenn dabei weniger Trades herauskommen.
+  </p>
+  <p>
+    "You can't leave your line, your strategy, even if it results in fewer trades."
+  </p>
+  <p>
+    Der Flughafen solle aus den Negativschlagzeilen herauskommen.
+  </p>
+  <p>
+    "The airport should get out of the negative headlines."
+  </p>
+  <p>
+    Alle sechs Wochen werde ein Sicherheitsupdate für das Release herauskommen.
+  </p>
+  <p>
+    "Every six weeks, a security update will be released for the release."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>hereinkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to come in</dd>
+  <dd>to get in</dd>
+  <dd>to go in</dd>
+  <dd>to walk in</dd>
+  <dd>to come</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Das muss erst einmal hereinkommen, bevor sich überhaupt an einen Verkauf denken lässt.
+  </p>
+  <p>
+    "That has to come in before \u00fccan even think about selling\u00e4s."
+  </p>
+  <p>
+    Mir tut teilweise das Herz weh, wenn Sachen hereinkommen, die wirklich noch verwendbar sind, zum Beispiel Laptops“, sagte Hornung.
+  </p>
+  <p>
+    "My heart hurts sometimes when things come in that are really still usable, like laptops," Hornung said.
+  </p>
+  <p>
+    Das Risiko, dass unvorhergesehene Dinge auf eine Abteilung, die unterbesetzt ist, hereinkommen, das könne nur mit Mehrarbeit bewerkstelligt werden.
+  </p>
+  <p>
+    "The risk of unforeseen things coming to a department that is understaffed can only be managed with extra work."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>herkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to come here</dd>
+  <dd>to get here</dd>
+  <dd>to come by</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Wo soll das Geld dafür herkommen?
+  </p>
+  <p>
+    "Where is the money going to come from?"
+  </p>
+  <p>
+    Woher genügend Wachstum zur Stabilisierung der Lage herkommen soll, ist ungewiss.
+  </p>
+  <p>
+    "It is uncertain where enough growth will come from to stabilize the situation."
+  </p>
+  <p>
+    Wo sollen da die Spenden herkommen?
+  </p>
+  <p>
+    "Where are the donations going to come from?"
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>herüberkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to come over</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Er möchte mit seinen Gästen über wirkliche Themen reden, aber das soll, eine Unmöglichkeit, zugleich spontan und gewitzt antikomisch herüberkommen.
+  </p>
+  <p>
+    "He wants to talk to his guests about real issues, but that, an impossibility, is supposed to come across as spontaneous and witty anti-comic at the same time."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>herunterkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to come down</dd>
+  <dd>to descend</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    <span>aufkommen <span>has no sample sentsences.</span></span>
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>hervorkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to come out</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    <span>aufkommen <span>has no sample sentsences.</span></span>
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>hierherkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to come here</dd>
+  <dd>to get here</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Nach meinem Verständnis ist die Schweiz kein klassisches Einwanderungsland, weil die Zugewanderten nicht hierherkommen, um Bürger des Landes zu werden wie in den USA, in Australien oder Kanada.
+  </p>
+  <p>
+    "As I understand it, Switzerland is not a classic country of immigration, because immigrants do not come here to become citizens of the country as they do in the USA, Australia or Canada."
+  </p>
+  <p>
+    Es wird immer Menschen geben, die hierherkommen, obwohl gewisse Dinge nur schlecht funktionieren wie die Wasserversorgung oder das Internet.
+  </p>
+  <p>
+    "There will always be people who come here, even though certain things don't work well, like the water supply or the internet."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>hineinkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to get in</dd>
+  <dd>to coat</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Die haben 2500 Frauen in einen Pool gestellt, die können von heute auf morgen in Aufsichtsräte hineinkommen.
+  </p>
+  <p>
+    "They put 2,500 women in a pool, and they can get into supervisory boards overnight."
+  </p>
+  <p>
+    Um neue Entwicklungen in der Untergrundszene zu erkennen, halten sich Strafermittler wie Sicherheitsexperten in deren Diskussionsforen - soweit sie dort hineinkommen - und Chat-Kanälen auf.
+  </p>
+  <p>
+    "In order to identify new developments in the underground scene, criminal investigators and security experts alike stay in their discussion forums - as far as they can get into them - and chat channels."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>hinzukommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to add</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Gleich fünf Profis sind heute nicht dabei, und in Robbie Kruse könnte ein sechster hinzukommen.
+  </p>
+  <p>
+    "Five pros are not there today, and Robbie Kruse could add a sixth."
+  </p>
+  <p>
+    Später in diesem Jahr soll ein russischer Flugzeugträger hinzukommen.
+  </p>
+  <p>
+    "Later this year, a Russian aircraft carrier is to be added."
+  </p>
+  <p>
+    Weil auch noch steigende Netzentgelte hinzukommen, könne man auch über ein komplettes Aussetzen nachdenken.
+  </p>
+  <p>
+    "Because there are also rising network charges, one could also think about a complete suspension."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>hochkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to come up</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    “ Die Landes-CDU habe „viel Substanz“ und werde wieder hochkommen.
+  </p>
+  <p>
+    "\u201c The state CDU has \u201ea lot of substance\u201c and will come up again."
+  </p>
+  <p>
+    " Die Landes-CDU habe "viel Substanz" und werde wieder hochkommen.
+  </p>
+  <p>
+    "\" The state CDU has \"a lot of substance\" and will come up again."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>klarkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to cope</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Insofern kann Hamburg mit steigenden Temperaturen durchaus klarkommen – wenn es entsprechend gemanagt wird.
+  </p>
+  <p>
+    "In this respect, Hamburg can certainly cope with rising temperatures – if it is managed accordingly."
+  </p>
+  <p>
+    Mit dieser Erkenntnis müssen wir ja alle leben und irgendwie klarkommen.
+  </p>
+  <p>
+    "We all have to live with this realization and somehow come to terms with it."
+  </p>
+  <p>
+    Sie lernen Regeln einzuhalten, sich zu konzentrieren, ausdauernd zu sein und natürlich müssen sie damit klarkommen zu verlieren.
+  </p>
+  <p>
+    "They learn to follow rules, to concentrate, to be persistent and, of course, they have to deal with losing."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>mitkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to come along</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Trotzdem: die Vorsicht der Schweden zeigt sich darin wie wenige Akteure bei den Angriffen so mitkommen.
+  </p>
+  <p>
+    "Nevertheless, the caution of the Swedes is reflected in how few players are able to keep up with the attacks."
+  </p>
+  <p>
+    "Daher haben wir vorher abgesprochen, dass sie beide nicht mitkommen", sagte Hirsch.
+  </p>
+  <p>
+    "That's why we agreed beforehand that neither of them would come along," Hirsch said.
+  </p>
+  <p>
+    An der Teamsitzung besprechen die fünf die Teilnahme an Kundgebungen; wer geht alles hin, wie viele Arbeiter werden mitkommen, lohnt es sich einen, eigenen Bus zu organisieren?
+  </p>
+  <p>
+    "At the team meeting, the five discuss participation in rallies; who is going there, how many workers will come along, is it worth organizing your own bus?"
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>nachkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to comply</dd>
+  <dd>to discharge</dd>
+  <dd>to fulfill</dd>
+  <dd>to honor</dd>
+  <dd>to meet</dd>
+  <dd>to perform</dd>
+  <dd>to respond</dd>
+  <dd>to shoulder</dd>
  </dl>
 </section>
     </body>
