--- a/output.html
+++ b/output.html
@@ -3813,5 +3813,251 @@
   <dd>to shoulder</dd>
  </dl>
 </section>
+<section class='samples'>
+  <p>
+    Der Nachfrage nach Häusern in Krefeld will der Gladbacher Immobilienmakler aber jetzt nachkommen.
+  </p>
+  <p>
+    "However, the Gladbach real estate agent now wants to meet the demand for houses in Krefeld."
+  </p>
+  <p>
+    So ist das Militärgefängnis Guantanamo noch immer in Betrieb, auch wenn keine neuen Gefangenen nachkommen.
+  </p>
+  <p>
+    "Thus, the military Guantanamo prison is still in operation, even if no new prisoners are coming in."
+  </p>
+  <p>
+    Um dieser Forderung nachkommen zu können, notierte der Bandleader seine Kompositionen nicht.
+  </p>
+  <p>
+    "In order to be able to meet this demand, the bandleader did not write down his compositions."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>rauskommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to come out</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>zunächst raus~kommen</dt>
+    <dd>to come out</dd>
+  </dl>
+  </dd>
+  <dd>to get out</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Dass wird mit der Zeit kommen, da wird die Wehmut rauskommen.
+  </p>
+  <p>
+    "That will come with time, that's when the melancholy will come out."
+  </p>
+  <p>
+    Da wird noch viel mehr rauskommen.
+  </p>
+  <p>
+    "There's a lot more to come out of it."
+  </p>
+  <p>
+    Er schwor sich, wenn er dort rauskommen werde, müsse er alles dafür tun, die Verantwortlichen zur Rechenschaft zu ziehen.
+  </p>
+  <p>
+    "He vowed that if he got out of there, he would have to do everything he could to bring those responsible to justice."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>reinkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to come in</dd>
+  <dd>to come inside</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Button führt jetzt vor Hülkenberg, die beide noch reinkommen müssen.
+  </p>
+  <p>
+    "Button is now ahead of H\u00fclkenberg, both of whom still have to get in."
+  </p>
+  <p>
+    Es würde reichen, wenn wir im Bundestag – falls wir reinkommen – inhaltlich kluge Fragen stellen.
+  </p>
+  <p>
+    "It would be enough if we in the Bundestag – if we get in – asked clever questions in terms of content."
+  </p>
+  <p>
+    Es gibt zwar Vorhänge, und es wird auch immer gefragt, ob man reinkommen darf.
+  </p>
+  <p>
+    "There are curtains, and people always ask if you can come in."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>rüberkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to come over</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Deshalb wollen jetzt alle so cool rüberkommen wie der geschmeidige Amerikaner.
+  </p>
+  <p>
+    "That's why everyone now wants to come across as cool as the supple American."
+  </p>
+  <p>
+    Er möchte souverän, schlagfertig und durchaus ein bisschen väterlich rüberkommen: Vor allem aber als Mann der politischen Mitte und nicht mehr als der rechte Ideologe, den er im Vorwahlkampf spielte.
+  </p>
+  <p>
+    "He wants to be confident, quick-witted and a bit paternal: but above all as a man of the political centre and no more than the right-wing ideologue he played in the primary."
+  </p>
+  <p>
+    The Darkness 2 bietet darüber hinaus reichlich schwarzen Humor und deftige Sprüche, die auch in der deutschen Synchro noch einigermaßen gut rüberkommen.
+  </p>
+  <p>
+    "The Darkness 2 also offers plenty of black humor and hearty speech, which also comes off reasonably well in the German dub."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>runterkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to come down</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Ligety führt mit einem riesigen Vorsprung und muss im zweiten Lauf nur noch irgendwie runterkommen.
+  </p>
+  <p>
+    "Ligety is running with a huge lead and just needs to get down in the second run somehow."
+  </p>
+  <p>
+    Wir müssen sicherstellen, dass die Menschen spontan bleiben und durchatmen, runterkommen können.
+  </p>
+  <p>
+    "We need to make sure that people can stay spontaneous and take a deep breath, come down."
+  </p>
+  <p>
+    Ich muss zuerst runterkommen.
+  </p>
+  <p>
+    "I need to come down first."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>übereinkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to agree</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Damals hatten sich Obama und der Kongress auf automatische Abgabenkürzungen und Steuererhöhung verständigt, sollte man bei den Sparmaßnahmen für das Budget nicht übereinkommen.
+  </p>
+  <p>
+    "At the time, Obama and Congress had agreed on automatic tax cuts and tax increases if you didn\u00fcr the budget not come to an agreement."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>umkommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to die</dd>
+  <dd>to kill</dd>
+  <dd>to perish</dd>
+ </dl>
+</section>
+<section class='samples'>
+  <p>
+    Sollte eine von ihnen umkommen, wäre der entführte Türke das erste Todesopfer.
+  </p>
+  <p>
+    "If one of them were to die, the kidnapped T\u00fcrke would be the first fatality."
+  </p>
+  <p>
+    Und je mehr Amerikaner sich bewaffnen, desto weniger werden umkommen.
+  </p>
+  <p>
+    "And the more Americans arm themselves, the fewer will perish."
+  </p>
+  <p>
+    Jeder, der hineingegangen wäre, hätte sich „erhebliche Verletzungen“ zuziehen oder gar umkommen können.
+  </p>
+  <p>
+    "Anyone who had gone in could have sustained significant injuries or even perished."
+  </p>
+</section><section class='definitions'>
+  <dl class='hwd'>
+  <dt>
+   <ul>
+    <li>vorankommen</li>
+    <li class='pos'>VERB</li>
+   </ul>
+  </dt>
+  <dd>to move forward</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>weiter voranzukommen</dt>
+    <dd>to move forward</dd>
+  </dl>
+  </dd>
+  <dd>to make progress</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>hier voranzukommen</dt>
+    <dd>to make progress</dd>
+  </dl>
+  </dd>
+  <dd>to progress</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>gut vorankommen</dt>
+    <dd>to progress well</dd>
+  </dl>
+  </dd>
+  <dd>to move</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>in dieser Richtung vorankommen</dt>
+    <dd>to move in this direction</dd>
+  </dl>
+  </dd>
+  <dd>to proceed</dd>
+  <dd class='expressions'>
+   <dl>
+    <dt>rasch voranzukommen</dt>
+    <dd>to proceed rapidly</dd>
+  </dl>
+  </dd>
+  <dd>to advance</dd>
+  <dd>to move ahead</dd>
+  <dd>to make any progress</dd>
+  <dd>to move on</dd>
+ </dl>
+</section>
     </body>
 </html>
